...
    case card(CardType)
    case goalkeeper
    case ownGoal

    var title: String {
        switch self {
        case .goal: "Who scored?"
        case .shotAttempt(.penaltyKick): "Who took the penalty?"
        case .shotAttempt, .shot: "Who took the shot?"
        case .corner: "Who took the corner?"
        case .steal: "Who won the ball?"
        case .foul: "Who committed the foul?"
        case .offside: "Who was offside?"
...
